@@ -7,12 +7,8 @@
 
 package org.dellroad.stuff.vaadin7;
 
-import com.vaadin.server.DeploymentConfiguration;
-import com.vaadin.server.ServiceException;
-import com.vaadin.server.VaadinRequest;
 import com.vaadin.server.VaadinServlet;
 import com.vaadin.server.VaadinServletService;
-import com.vaadin.server.VaadinSession;
 
 import java.util.Properties;
 
@@ -179,21 +175,6 @@ public class SpringVaadinServlet extends VaadinServlet {
         // Register session listener
         servletService.addSessionInitListener(sessionListener);
         servletService.addSessionDestroyListener(sessionListener);
-    }
-
-    /**
-     * Workaround for <a href="http://dev.vaadin.com/ticket/9946">Vaadin Bug #9946</a>.
-     */
-    @Override
-    protected VaadinServletService createServletService(DeploymentConfiguration deploymentConfiguration) {
-        return new VaadinServletService(this, deploymentConfiguration) {
-            @Override
-            protected VaadinSession createVaadinSession(VaadinRequest request) throws ServiceException {
-                VaadinSession session = super.createVaadinSession(request);
-                VaadinSession.setCurrent(session);
-                return session;
-            }
-        };
     }
 }
 
